Fix: Footer font size too big.

--- a/css/main.css
+++ b/css/main.css
@@ -118,6 +118,7 @@ h3 {
 footer {
   margin-top: 100px;
   text-align: center;
+  font-size: 0.5em;
 }
 
 /* pagination */
